<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!--Preferences Keys-->
	<string name="pref_enable_vibration" translate="false">PREF_ENABLE_VIBRATION</string>
	<string name="pref_layout_transparency" translate="false">PREF_LAYOUT_TRANSPARENCY</string>
	<string name="pref_vibrate_when_sliding_direction" translate="false">PREF_VIBRATE_WHEN_SLIDING</string>
	<string name="pref_ignore_size_settings" translate="false">PREF_IGNORE_SIZE_SETTINGS</string>
	<string name="pref_size_every_buttons" translate="false">PREF_SIZE_EVERY_BUTTONS</string>
	<string name="pref_directory" translate="false">PREF_DIRECTORY</string>
	<string name="pref_games_directories" translate="false">PREF_GAME_DIRECTORIES</string>

	<!--GameBrowser Activity-->
	<string name="app_name" translate="false">EasyRPG Player</string>
	<string name="autodetect">Autodetect Region (Recommended)</string>
	<string name="west_europe">Western European</string>
	<string name="east_europe">Central/Eastern European</string>
	<string name="cyrillic">Cyrillic</string>
	<string name="japan">Japanese</string>
	<string name="korean">Korean</string>
	<string name="chinese_simple">Chinese (Simplified)</string>
	<string name="chinese_traditional">Chinese (Traditional)</string>
	<string name="greek">Greek</string>
	<string name="turkish">Turkish</string>
	<string name="hebrew">Hebrew</string>
	<string name="arabic">Arabic</string>
	<string name="baltic">Baltic</string>
	<string name="thai">Thai</string>
	<string name="vietnamese">Vietnamese</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="do_want_quit">Do you really want to quit?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="creating_dir_failed">Creating $PATH directory failed</string>
	<string name="path_not_readable">$PATH not readable</string>
	<string name="no_games_found_and_explanation">No games found.\nYou can add additional game directories in the settings.</string>
	<string name="no_external_storage">No external storage (e.g. SD card) found</string>
	<string name="not_valid_game">$PATH is not a valid game</string>
	<string name="select_game_region">Select Game Region</string>
	<string name="change_the_layout">Change the layout</string>
	<string name="choose_layout">Choose a layout</string>
	<string name="unknown_region">Unknown region</string>
	<string name="region_modification_failed">Changing region failed</string>
	<string name="refresh">Refresh</string>
	<string name="change_default_mapping">Change the default button mapping</string>
	<string name="how_to_use_easy_rpg">How to use EasyRPG Player</string>
	<string name="how_to_use_easy_rpg_explanation">
Installation instructions:\n
By default game folders are searched for in /easyrpg/games. You can add additional game directories in the settings.\n
Optional: Place the RTP in /easyrpg/rtp/2000 for the RPG Maker 2000 RTP and in /easyrpg/rtp/2003 for the RPG Maker 2003 RTP.\n
\n
Hint: in order to get games properly detected they must be uncompressed into a subdirectory of /easyrpg/games (by default), e.g.:\n
\t/easyrpg/games/MyGame/Data/RPG_RT.ldb is OK.\n
\t/easyrpg/games/MyGame/RPG_RT.ldb is OK.\n
\t/easyrpg/games/MyGame.zip is WRONG.\n
\n
Special features:\n
You can add additional on-screen buttons. Tap the menu button to edit screen buttons position.\n
Once there, tap the back button to access to an additional menu to add more buttons to the screen.
	</string>
	
	<!--Ingame menu-->
	<string name="toggle_fps">Toggle FPS</string>
	<string name="toggle_ui">Toggle Virtual Buttons</string>
	<string name="end_game">End Game</string>
	<string name="report_bug">Report a bug</string>
	<string name="report_bug_msg">This function will open your E-mail program (e.g. Gmail) to send us the bug report.\n
If you don\'t want to send a mail or don\'t have a mail program configured you can open a new issue at https://github.com/EasyRPG/Player/issues instead.
	</string>
	<string name="report_bug_mail">Thank you for supporting EasyRPG Player.\n
A logfile and your savegames were attached to this E-Mail.\n
Please don\'t remove the logfile! We need a savegame that is close to the bug location.\n
We speak English, German and Spanish.\n
Please tell us in detail what went wrong.\n
[You can remove this instruction text]
	</string>

	<!--Settings Activity-->
	<string name="settings">Settings</string>
	<string name="add_game_folder">Add a game folder</string>
	<string name="enable_vibration">Enable vibrations</string>
	<string name="vibrate_when_sliding_direction">Vibrate when sliding to another direction</string>
	<string name="disable_sounds">Disable sounds</string>
	<string name="input_layout_transparency">Input Layout transparency:</string>
	<string name="ignore_size_settings">Ignore buttons\' size settings and use this one for every buttons:</string>
	<string name="no_read_access_on_dir">No read access on %1$s</string>
	<string name="easyrpg_folder">EasyRPG folder</string>
	<string name="quick_access">Quick access</string>
	
	<!--InputLayout Managing-->
	<string name="manage_input_layouts">Manage Input Layouts:</string>
	<string name="add_an_input_layout">Add an Input Layout</string>
	<string name="set_as_default">Set as default</string>
	<string name="edit_name">Edit name</string>
	<string name="edit_layout">Edit the layout</string>
	<string name="delete">Delete</string>
	<string name="default_layout">Default</string>

	<!--ButtonMapping Activity-->
	<string name="add_a_button">Add a button</string>
	<string name="reset_button_mapping">Reset button mapping</string>
	<string name="exit_without_saving">Exit without saving</string>
	<string name="save_and_quit">Save and quit</string>
	<string name="key_enter">Enter (Z)</string>
	<string name="key_cancel">Cancel (ESC and X)</string>
	<string name="key_shift">Shift</string>
</resources>
