<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
	<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/rg"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	>
    	<RadioButton
        	android:id="@+id/rd_west"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/west_europe" />

    	<RadioButton
        	android:id="@+id/rd_east"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
       		android:text="@string/east_europe" />
    
   		<RadioButton
       	 	android:id="@+id/rd_jp"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/japan" />
	</RadioGroup>

    <Button
    	android:id="@+id/rd_region_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg"
        android:layout_centerInParent="true"
        android:text="@string/cancel" />
 </RelativeLayout>
 