<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Vibration -->
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_enable_vibration"
        android:text="@string/enable_vibration"
        android:onClick="checkboxEnableVibration"
        />

    <!-- Input Layout Managing -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:text="@string/manage_input_layouts" />

    <ListView
        android:id="@+id/controls_settings_layout_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addAnInputLayout"
        android:text="@string/add_an_input_layout" />

</LinearLayout>